<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/update_category"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="18sp"
            style="@style/Widget.AppCompat.Spinner.Underlined"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/title_label">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/update_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                app:errorEnabled="true"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/amount_label">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/update_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                app:errorEnabled="true"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/update_date"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:drawableRight="@drawable/ic_calendar"
            android:text="@string/date_label"
            android:textSize="22sp" />

        <android.support.design.widget.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/remarks_label">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/update_remarks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                app:errorEnabled="true"/>

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="30dp">

        <Button
            android:id="@+id/update_btndelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/delete_label"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimaryDark"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/update_btnupdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="16dp"
            android:text="@string/update_label"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimaryDark"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <Button
            android:id="@+id/update_btncancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/cancel_label"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimaryDark"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>