<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".ReminderActivity">

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/title_label">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/reminder_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            app:errorEnabled="true"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/description_label">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/reminder_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            app:errorEnabled="true"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/reminder_scheduleNotification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/reminder_scheduleNotification_label"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimaryDark"
        android:textSize="18sp" />

    <Button
        android:id="@+id/reminder_cancelNotification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/cancel_label"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimaryDark"
        android:textSize="18sp" />



</LinearLayout>