<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp"
    android:elevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/dashboard_expense_categoryicon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_food_beverage" />

            <TextView
                android:id="@+id/dashboard_expense_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/category_label"
                android:textColor="@color/nav_header"
                android:textSize="20sp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/dashboard_expense_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/amount_label"
            android:textColor="@color/expense"
            android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
            android:id="@+id/dashboard_expense_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/date_label"
            android:textAppearance="?android:textAppearanceMedium"/>

    </LinearLayout>

</android.support.v7.widget.CardView>