<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_margin="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="5dp"
    app:cardElevation="5dp"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">

            <TextView
                android:id="@+id/expense_recycler_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_label"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3">

            <ImageView
                android:id="@+id/expense_recycler_categoryicon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_food_beverage" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/expense_recycler_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category_label"
                android:textColor="@color/nav_header"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4">

            <TextView
                android:id="@+id/expense_recycler_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amount_label"
                android:textColor="@color/expense"
                android:textAppearance="?android:textAppearanceSmall" />
        </RelativeLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>