<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF1F3FC"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ChartFragment">

        <!-- Card view for displaying the -->
        <!-- Pie chart and details of pie chart -->
        <android.support.v7.widget.CardView
            android:id="@+id/cardViewGraph"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:elevation="10dp"
            app:cardCornerRadius="10dp">

                <!--Linear layout to display pie chart -->
                <!-- and details of pie chart-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <!--Pie chart to display the data-->
                    <org.eazegraph.lib.charts.PieChart
                        android:id="@+id/piechart"
                        android:layout_width="122dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_weight="1" />

                        <!-- Create another linear layout -->
                        <!-- to display pie chart details -->
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_marginLeft="16dp"
                            android:orientation="vertical"
                            android:gravity="center_vertical">

                                <!--Linear layout to display Income-->
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="20dp"
                                    android:layout_gravity="center_vertical"
                                    android:layout_marginTop="5dp">

                                        <!--View to display the green color icon-->
                                        <View
                                            android:layout_width="15dp"
                                            android:layout_height="match_parent"
                                            android:background="@color/income"/>

                                        <!--Text view to display income text -->
                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/income_label"
                                            android:textSize="16sp"
                                            android:paddingLeft="10dp"/>

                                </LinearLayout>

                                <!--Linear layout to display Expense -->
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="20dp"
                                    android:layout_gravity="center_vertical"
                                    android:layout_marginTop="5dp">

                                        <!--View to display the red color icon-->
                                        <View
                                            android:layout_width="15dp"
                                            android:layout_height="match_parent"
                                            android:background="@color/expense"/>

                                        <!--Text view to display expense text -->
                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/expense_label"
                                            android:textSize="16sp"
                                            android:paddingLeft="10dp" />

                                </LinearLayout>

                        </LinearLayout>

                </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- Another Card view for displaying -->
        <!-- Use of income and expense -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardViewGraph"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:elevation="10dp"
            app:cardCornerRadius="10dp">

                <!--Relative layout to display -->
                <!-- use of income and expense -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                        <!--Text view to use of -->
                        <!-- income and expense text-->
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/chart_table_label"
                            android:textSize="23sp"
                            android:textStyle="bold"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginTop="16dp"/>

                        <!--View to display the line-->
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/color_two"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginTop="5dp"/>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="22dp"
                            android:layout_marginLeft="22dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="sans-serif-light"
                                    android:text="@string/income_label"
                                    android:textSize="18sp"/>

                                <TextView
                                    android:id="@+id/chart_income"
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content"
                                    android:text="0"
                                    android:textAlignment="textEnd"
                                    android:textSize="18sp"
                                    android:textColor="@color/income"
                                    android:textStyle="bold"
                                    android:fontFamily="sans-serif-light"
                                    android:layout_alignParentRight="true"/>

                        </RelativeLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/color_two"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="22dp"
                            android:layout_marginLeft="22dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="16dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="sans-serif-light"
                                    android:text="@string/expense_label"
                                    android:textSize="18sp"/>

                                <TextView
                                    android:id="@+id/chart_expense"
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content"
                                    android:text="0"
                                    android:textAlignment="textEnd"
                                    android:textSize="18sp"
                                    android:textColor="@color/expense"
                                    android:textStyle="bold"
                                    android:fontFamily="sans-serif-light"
                                    android:layout_alignParentRight="true"/>

                        </RelativeLayout>

                </LinearLayout>

        </android.support.v7.widget.CardView>

</RelativeLayout>